feat: create traduction files

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,3 +5,7 @@ en:
     edit: "Edit"
     show: "Show"
     delete: "Delete"
+  coin: Coins
+  mining_type: Mining Types
+  welcome_description: Ready to enter the world of crypto banking? CryptoWallet is your gateway to brand new digital currency services to make life easier. You can use CryptoWallet to buy, sell, and trade crypto.
+  welcome_title: Add your crypto coins in a wallet
