--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -5,3 +5,7 @@ pt-BR:
     edit: "Editar"
     show: "Mostrar"
     delete: "Apagar"
+  coin: Moedas
+  mining_type: Tipos de mineração
+  welcome_description: Pronto para entrar no mundo do banco de criptomoedas? CryptoWallet é a sua porta de entrada para novos serviços de moeda digital para facilitar a vida. Você pode usar a CryptoWallet para comprar, vender e negociar criptomoedas.
+  welcome_title: Adicione suas moedas criptográficas
